--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethereumjs/common": "^3.0.0",
+    "@ethereumjs/tx": "^4.0.0",
+    "@ethereumjs/util": "^8.0.0",
     "bip39": "^2.5.0",
-    "ethereumjs-tx": "^1.3.7",
     "ethereumjs-wallet": "^0.6.5",
     "js-sha3": "^0.8.0",
     "reload": "^3.0.5",
-    "watchify": "^3.11.0"
+    "watchify": "^4.0.0"
   }
 }
